--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Chat iojs</title>
-</head>
-<body>
-	<h1>Hola io.js</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>:: Chat - io.js :: </title>
+  </head>
+  <body>
+    <div id="video-preview"></div>
+    <button id="record">Record</button>
+    <script src="/app.js"></script>
+  </body>
 </html>
