--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="video-preview"></div>
+    <video id="video" width="200" height="200"></video>
     <button id="record">Record</button>
     <script src="/app.js"></script>
   </body>
