--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>:: Chat - io.js :: </title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>:: Chat - iojs :: </title>
   </head>
   <body>
-    <div id="video-preview"></div>
-    <video id="video" width="200" height="200"></video>
-    <button id="record">Record</button>
+    <section>
+      <ul id="messages"></ul>
+    </section>
+    <footer>
+      <div id="video-preview"></div>
+      <form>
+        <input type="text" name="message">
+      </form>
+    </footer>
     <script src="/app.js"></script>
   </body>
 </html>
