--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,95 @@
+
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
+
+        <title>:: vChat - Client ::</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="css/dashboard.css" rel="stylesheet">
+
+        <!-- My Styles -->
+        <link rel="stylesheet" href="css/main.css">
+    
+
+    </head>
+
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">:: vChat - Client ::</a>
+                </div>
+            </div>
+        </nav>
+
+        <div id="main-container" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-3 col-md-2 sidebar">
+                    <h4>Users - 4</h4>
+                    <ul class="nav nav-sidebar">
+                        <li class="active"><a href="#">Hector <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+                        <li><a href="#">Alejandro</a></li>
+                        <li><a href="#">Daniela</a></li>
+                        <li><a href="#">Maria</a></li>
+
+                    </ul>
+                </div>
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                    <h1 class="page-header">Topic</h1>
+                    <div id="messages" class="row placeholders">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <footer>
+            <div id="video-preview"></div>
+                <form>
+                    <input type="text" name="message" placeholder="Escribe un mensaje de maximo 140 caracteres." maxlength="140">
+                </form>
+            </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="/app.js"></script>
+    </body>
+</html>
+
+<!-- 
 <!DOCTYPE html>
 <html>
   <head>
@@ -20,3 +112,5 @@
     <script src="/app.js"></script>
   </body>
 </html>
+
+-->
