--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
+        <meta name="description" content="vchat Client">
+        <meta name="author" content="hecto932@gmail.com">
 
         <title>:: vChat - Client ::</title>
 
@@ -42,7 +41,7 @@
         <div id="main-container" class="container-fluid">
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
-                    <h4>Users - 4</h4>
+                    <h4 class="totalUsers">Users - 4</h4>
                     <ul class="nav nav-sidebar">
                         <li class="active"><a href="#">Hector <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Alejandro</a></li>
@@ -69,8 +68,8 @@
 
                     </ul>
                 </div>
-                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Topic</h1>
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+                    <h1>Tema de grupo</h1>
                     <div id="messages" class="row placeholders">
                     </div>
                 </div>
